tests/compile_fail/display/unnamed_field_prefixed_with_dot.stderr
error: float literals must have an integer part
 --> tests/compile_fail/display/unnamed_field_prefixed_with_dot.rs:2:24
  |
2 | #[display("Stuff({})", .0)]
  |                        ^^ help: must have an integer part: `0.0`
